Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-24553

Qt Creator does not check for compatible CMake version (was: CMake project fails to parse)

XMLWordPrintable

    • Linux/X11
    • bdc74ea2a0047186f0b3e9240fa8cd894c306a55 (qt-creator/qt-creator/4.14)

      After updating from Qt Creator 4.11 to 4.13.0 our CMake based project fails to parse and we are left with just a folder and a single CMakeLists.txt file.

      On the build settings page an icon is highlighted saying "The project was not parsed successfully". On the console I see:

      /home/steve/Qt/Tools/QtCreator/bin/qtcreator
      QApplication: invalid style override 'gtk' passed, ignoring it.
      Available styles: Windows, Fusion
      "Warning reading /home/steve/.config/QtProject/qtcreator/default.qws:122: Failed to read element \"value\"."
      "Warning reading /home/steve/.config/QtProject/qtcreator/default.qws:122: Failed to read element \"value\"."
      QFSFileEngine::open: No file name specified
      QIODevice::read (QFile, ""): device not open
      QFSFileEngine::open: No file name specified
      QIODevice::read (QFile, ""): device not open
      QFSFileEngine::open: No file name specified
      QIODevice::read (QFile, ""): device not open
      QFSFileEngine::open: No file name specified
      QIODevice::read (QFile, ""): device not open
      "Invalid codemodel file generated by CMake."

        For Gerrit Dashboard: QTCREATORBUG-24553
        # Subject Branch Project Status CR V

            con Eike Ziller
            s_bainbridge Stephen Bainbridge
            Votes:
            3 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes